--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.3",
     "axios": "^0.25.0",
     "mongoose": "^6.1.9",
     "next": "12.0.9",
+    "next-redux-wrapper": "^8.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-redux": "^8.0.5"
   },
   "devDependencies": {
     "eslint": "8.7.0",
