--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "todo-app",
+  "name": "nextjs-react-the-complete-guide",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -8,17 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^1.9.3",
     "axios": "^0.25.0",
+    "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
+    "eslint": "8.35.0",
+    "eslint-config-next": "13.2.3",
     "mongoose": "^6.1.9",
-    "next": "12.0.9",
-    "next-redux-wrapper": "^8.1.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-redux": "^8.0.5"
-  },
-  "devDependencies": {
-    "eslint": "8.7.0",
-    "eslint-config-next": "12.0.9"
+    "next": "13.2.3",
+    "next-auth": "^4.20.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   }
 }
